AF-1218 : Add serviceId parameter to getServiceInstances
